// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormInput /> should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <input
      class="form-input"
      name="email"
      type="text"
      value=""
    />
  </form>
</DocumentFragment>
`;

exports[`<FormInput /> with type: "password" should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <input
      class="form-input"
      name="email"
      type="password"
      value=""
    />
  </form>
</DocumentFragment>
`;

exports[`<FormInput /> with type: "text" should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <input
      class="form-input"
      name="email"
      type="text"
      value=""
    />
  </form>
</DocumentFragment>
`;
